@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2009,v 1.4488 2009/12/02 12:01:16 wiz Exp $
+$NetBSD: CHANGES-2009,v 1.4489 2009/12/02 12:09:08 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2009:
 
@@ -6005,3 +6005,5 @@ Changes to the packages collection and infrastructure in 2009:
 	Updated chat/telepathy-idle to 0.1.5 [wiz 2009-12-02]
 	Updated chat/telepathy-glib to 0.9.1 [wiz 2009-12-02]
 	Updated devel/mercurial to 1.4.1 [wiz 2009-12-02]
+	Added www/ruby-patron version 0.4.4 [fhajny 2009-12-02]
+	Added net/ruby-amqp version 0.6.5 [fhajny 2009-12-02]
